--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,6 @@ jobs:
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
-
   build-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -34,6 +33,35 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
+  test-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps: 
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Test Frontend
+          command: |
+            cd frontend
+            npm install
+            npm run test             
+  test-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      # Checkout code from git
+      - checkout
+      # Restore from cache
+      - restore_cache:
+          keys: [backend-build]
+      # Your job code here
+      - run:
+          name: Test Backend
+          command: |
+            cd backend
+            npm install
+            npm run test
             
 
 workflows:
@@ -41,3 +69,7 @@ workflows:
     jobs:
       - build-frontend
       - build-backend
+      - test-frontend:
+          requires: [build-frontend]
+      - test-backend:
+          requires: [build-backend]
