--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,7 +62,32 @@ jobs:
             cd backend
             npm install
             npm run test
-            
+  scan-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [frontend-build]
+      - run:
+          name: Analyze Frontend
+          command: |
+            cd frontend
+            npm install
+            npm audit --audit-level=critical
+  scan-backend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - restore_cache:
+          keys: [backend-build]
+      - run:
+          name: Analyze Backend
+          command: |
+            cd backend
+            npm install
+            npm audit --audit-level=critical          
 
 workflows:
   default:
@@ -72,4 +97,8 @@ workflows:
       - test-frontend:
           requires: [build-frontend]
       - test-backend:
+          requires: [build-backend]
+      - scan-frontend:
+          requires: [build-frontend]
+      - scan-backend:
           requires: [build-backend]
