--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,8 +105,7 @@ jobs:
             npm audit fix --force
             npm audit --audit-level=critical
   deploy-infrastructure:
-    docker: 
-      - image: amazon/aws-cli
+    docker: amazon/aws-cli
     steps:
       # Checkout code from git
       - checkout
@@ -151,3 +150,5 @@ workflows:
           requires: [build-frontend]
       - scan-backend:
           requires: [build-backend]
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
