--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -177,12 +177,14 @@ jobs:
           keys: [backend-build]
       - run:
           name: Run migrations
+          no_output_timeout: 10m
           command: |
             # Your code here
             cd backend
             npm run migrations > migrations_dump.txt
+            cat migrations_dump.txt
       - run:
-          name: Send migration results to memstash
+          name: Send migration results to KV DB
           command: |
             # Your code here
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt 
