--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,6 +135,7 @@ jobs:
           command: |
             aws ec2 describe-instances --query 'Reservations[*].Instances[*].PublicIpAddress' \
               --output text >> ~/inventory.txt
+              cat ~/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
