--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -205,6 +205,9 @@ jobs:
           command: |
             # your code here
             yum install -y tar gzip
+            yum install -y nodejs
+            node -v
+            npm -v
       - run:
           name: Get backend url
           command: |
@@ -228,22 +231,5 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
-      - test-frontend:
-          requires: [build-frontend]
-      - test-backend:
-          requires: [build-backend]
-      - scan-frontend:
-          requires: [build-frontend]
-      - scan-backend:
-          requires: [build-backend]
-      - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
-      - deploy-frontend:
-          requires: [run-migrations]
+      - deploy-frontend
 
