--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -197,17 +197,13 @@ jobs:
       # Here's where you will add some code to rollback on failure
   deploy-frontend:
     docker:
-      - image: amazon/aws-cli
+      - image: circleci/node:13.8.0
     steps:
       - checkout
-      - run:
-          name: Install dependencies
+      - run: 
+          name: install aws aws-cli
           command: |
-            # your code here
-            yum install -y tar gzip
-            yum install -y nodejs
-            node -v
-            npm -v
+            apt -y install awscli
       - run:
           name: Get backend url
           command: |
