--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -204,6 +204,7 @@ jobs:
       - run: 
           name: install aws aws-cli
           command: |
+            apt get update
             apt -y install awscli
       - run:
           name: Get backend url
