--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -167,7 +167,7 @@ jobs:
       - checkout
       # Add ssh keys with fingerprint
       - add_ssh_keys: 
-          fingerprints: ["53:ae:1b:d5:c2:60:05:49:32:c4:69:57:24:e0:0f:cf"]
+          fingerprints: ["6a:c7:38:0f:9b:03:31:47:15:c4:97:65:ff:01:e9:ac"]
       # attach workspace
       - attach_workspace:
           at: ~/
@@ -228,7 +228,7 @@ jobs:
           name: Get backend url
           command: |
             # your code here
-            export BACKEND_IP=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text')
+            export BACKEND_IP=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo "${API_URL}"
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
@@ -254,7 +254,7 @@ jobs:
       - checkout
       # Add ssh keys with fingerprint
       - add_ssh_keys: 
-          fingerprints: ["53:ae:1b:d5:c2:60:05:49:32:c4:69:57:24:e0:0f:cf"]
+          fingerprints: ["6a:c7:38:0f:9b:03:31:47:15:c4:97:65:ff:01:e9:ac"]
       # attach workspace
       - attach_workspace: 
           at: ~/
