--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -167,7 +167,7 @@ jobs:
       - checkout
       # Add ssh keys with fingerprint
       - add_ssh_keys: 
-          fingerprints: ["6a:c7:38:0f:9b:03:31:47:15:c4:97:65:ff:01:e9:ac"]
+          fingerprints: ["53:ae:1b:d5:c2:60:05:49:32:c4:69:57:24:e0:0f:cf"]
       # attach workspace
       - attach_workspace:
           at: ~/
@@ -254,7 +254,7 @@ jobs:
       - checkout
       # Add ssh keys with fingerprint
       - add_ssh_keys: 
-          fingerprints: ["6a:c7:38:0f:9b:03:31:47:15:c4:97:65:ff:01:e9:ac"]
+          fingerprints: ["53:ae:1b:d5:c2:60:05:49:32:c4:69:57:24:e0:0f:cf"]
       # attach workspace
       - attach_workspace: 
           at: ~/
