--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,6 +203,7 @@ jobs:
             # Your code here
             cd backend
             npm run migrations > migrations_dump.txt
+            echo "content of migrations_dump.txt"
             cat migrations_dump.txt
       - run:
           name: Send migration results to KV DB
@@ -217,7 +218,7 @@ jobs:
       # Here's where you will add some code to rollback on failure
   deploy-frontend:
     docker:
-      - image: python:3.7-alpine3.11
+      - image: python:3.11-rc-alpine
     steps:
       - checkout
       - run: 
@@ -252,7 +253,7 @@ jobs:
   deploy-backend:
     docker:
       # Docker image here that supports Ansible
-      - image: python:3.7-alpine3.11
+      - image: python:3.11-rc-alpine
     steps:
       # Checkout code from git
       - checkout
