--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -228,6 +228,7 @@ jobs:
             apk add gzip
             apk add npm
             apk add nodejs
+            apk add --update curl
             pip install awscli
       - run:
           name: Get backend url
@@ -271,6 +272,7 @@ jobs:
             apk add npm
             apk add nodejs
             apk add --update ansible
+            apk add --update curl
             pip install awscli   
       - run:
           name: Deploy backend
@@ -288,6 +290,43 @@ jobs:
       # Here's where you will add some code to rollback on failure
       - revert-migrations
       - destroy-environment
+  smoke-test:
+    docker:
+      - image: python:3.11-rc-alpine 
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            apk add --update nodejs
+            apk add --update npm
+            apk add --update curl
+      - run:
+          name: Backend smoke test.
+          command: |
+            export API_URL="http://${BACKEND_IP}:3030"
+            echo "${API_URL}"
+            if curl "${API_URL}/api/status" | grep "ok"
+            then
+              return 0
+            else
+              return 1
+            fi
+      - run:
+          name: Frontend smoke test.
+          command: |
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
+            echo ${URL}
+            if curl -s ${URL} | grep "Welcome"
+            then
+              # Change this to 0 after the job fails
+              return 1
+            else
+              return 1
+            fi
+      # Here's where you will add some code to rollback on failure
+      - revert-migration
+      - destroy-infrastructure
 
 workflows:
   default:
@@ -312,3 +351,5 @@ workflows:
           requires: [run-migrations]
       - deploy-backend:
           requires: [run-migrations]
+      - smoke-test:
+          requires: [deploy-frontend, deploy-backend]
