--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -326,7 +326,7 @@ jobs:
             fi
       # Here's where you will add some code to rollback on failure
       - revert-migrations
-      - destroy-infrastructure
+      - destroy-environment
 
 workflows:
   default:
