--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -306,6 +306,7 @@ jobs:
           name: Backend smoke test.
           command: |
             ipAddress=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
+            echo "${ipAddress}"
             export API_URL="http://${ipAddress}:3030"
             echo "${API_URL}"
             if curl "${API_URL}/api/status" | grep "ok"
