--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -305,7 +305,7 @@ jobs:
       - run:
           name: Backend smoke test.
           command: |
-            ipAddress=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
+            ipAddress=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-fc916f0" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             echo "${ipAddress}"
             export API_URL="http://${ipAddress}:3030"
             echo "${API_URL}"
@@ -318,7 +318,7 @@ jobs:
       - run:
           name: Frontend smoke test.
           command: |
-            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
+            URL="http://udapeople-fc916f0.s3-website-us-east-1.amazonaws.com/#/employees"
             echo ${URL}
             if curl -s ${URL} | grep "Welcome"
             then
