--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -305,7 +305,7 @@ jobs:
       - run:
           name: Backend smoke test.
           command: |
-            ipAddress=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-fc916f0" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
+            ipAddress=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-eacd2f8" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             echo "${ipAddress}"
             export API_URL="http://${ipAddress}:3030"
             echo "${API_URL}"
@@ -318,7 +318,7 @@ jobs:
       - run:
           name: Frontend smoke test.
           command: |
-            URL="http://udapeople-fc916f0.s3-website-us-east-1.amazonaws.com/#/employees"
+            URL="http://udapeople-eacd2f8.s3-website-us-east-1.amazonaws.com/#/employees"
             echo ${URL}
             if curl -s ${URL} | grep "Welcome"
             then
@@ -333,25 +333,4 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
-      - test-frontend:
-          requires: [build-frontend]
-      - test-backend:
-          requires: [build-backend]
-      - scan-backend:
-          requires: [build-backend]
-      - scan-frontend:
-          requires: [build-frontend]
-      - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
-      - deploy-frontend:
-          requires: [run-migrations]
-      - deploy-backend:
-          requires: [run-migrations]
-      - smoke-test:
-          requires: [deploy-frontend, deploy-backend]
+      - smoke-test
