--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,9 @@ commands:
           name: Destroy environments
           when: on_fail
           command: |
-            aws cloudformation delete-stack --stack-name "udapeople-backend--${CIRCLE_WORKFLOW_ID:0:7}"
-            aws s3 rm s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-            aws cloudformation delete-stack --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}"
+            aws cloudformation delete-stack --stack-name "udapeople-backend-eacd2f8"
+            aws s3 rm s3://udapeople-eacd2f8 --recursive
+            aws cloudformation delete-stack --stack-name "udapeople-frontend-eacd2f8"
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.    
     steps:
@@ -20,7 +20,7 @@ commands:
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS = $(curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\})
+            SUCCESS = $(curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_eacd2f8)
             if(( $SUCCESS==1 )); 
             then
               cd ~/project/backend
@@ -328,7 +328,8 @@ jobs:
               return 1
             fi
       # Here's where you will add some code to rollback on failure
-     
+      - revert-migrations
+      - destroy-environment
 
 workflows:
   default:
