--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,9 @@ commands:
           name: Destroy environments
           when: on_fail
           command: |
-            aws cloudformation delete-stack --stack-name "udapeople-backend-eacd2f8"
-            aws s3 rm s3://udapeople-eacd2f8 --recursive
-            aws cloudformation delete-stack --stack-name "udapeople-frontend-eacd2f8"
+            aws cloudformation delete-stack --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}"
+            aws s3 rm s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
+            aws cloudformation delete-stack --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}"
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.    
     steps:
@@ -20,7 +20,7 @@ commands:
           when: on_fail
           command: |
             # Curl command here to see if there was a successful migration associated with the workflow id, store result in SUCCESS variable
-            SUCCESS = $(curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_eacd2f8)
+            SUCCESS = $(curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\})
             echo "SUCCESS = $SUCCESS"
             if(( $SUCCESS == '1' )); 
             then
@@ -306,7 +306,7 @@ jobs:
       - run:
           name: Backend smoke test.
           command: |
-            ipAddress=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-eacd2f8" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
+            ipAddress=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             echo "${ipAddress}"
             export API_URL="http://${ipAddress}:3030"
             echo "${API_URL}"
@@ -319,7 +319,7 @@ jobs:
       - run:
           name: Frontend smoke test.
           command: |
-            URL="http://udapeople-eacd2f8.s3-website-us-east-1.amazonaws.com/#/employees"
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
             echo ${URL}
             if curl -s ${URL} | grep "Welcome"
             then
