--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,7 +213,11 @@ jobs:
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt 
             then
               echo "insecure" >> ~/.curlrc
-            # If you are using kvdb.io, generate the bucket ID "9GE4jRtKznmVKRfvdBABBe" in your local terminal first
+              curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\}  -d '1'
+            fi
+            if grep -q "No migrations are pending" ~/project/backend/migrations_dump.txt 
+            then
+              echo "insecure" >> ~/.curlrc
               curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\}  -d '1'
             fi
       # Here's where you will add some code to rollback on failure
