--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,13 +213,16 @@ jobs:
             if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt 
             then
               echo "insecure" >> ~/.curlrc
-              curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\}  -d '1'
+              curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\} -d '1'
             fi
             if grep -q "No migrations are pending" ~/project/backend/migrations_dump.txt 
             then
               echo "insecure" >> ~/.curlrc
-              curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\}  -d '1'
+              curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\} -d '1'
             fi
+            curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\} -d '1'
+            echo "kvdb content"
+            echo "curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\}"
       # Here's where you will add some code to rollback on failure
   deploy-frontend:
     docker:
@@ -334,7 +337,6 @@ jobs:
             fi
       # Here's where you will add some code to rollback on failure
       - revert-migrations
-      - destroy-environment
 
 workflows:
   default:
