--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,26 +203,27 @@ jobs:
           command: |
             # Your code here
             cd backend
-            npm run migrations > migrations_dump.txt
+            npm run migrations > /home/ubuntu/migrations_dump.txt
             echo "content of migrations_dump.txt"
-            cat migrations_dump.txt
+            cat /home/ubuntu/migrations_dump.txt
       - run:
           name: Send migration results to KV DB
           command: |
             # Your code here
-            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt 
+            cat /home/ubuntu/migrations_dump.txt 
+            if grep -q "has been executed successfully." /home/ubuntu/migrations_dump.txt 
             then
               echo "insecure" >> ~/.curlrc
-              curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\} -d '1'
+              curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_3b6bdb9 -d '1'
             fi
-            if grep -q "No migrations are pending" ~/project/backend/migrations_dump.txt 
+            if grep -q "No migrations are pending" /home/ubuntu/migrations_dump.txt 
             then
               echo "insecure" >> ~/.curlrc
-              curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\} -d '1'
+              curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_3b6bdb9 -d '1'
             fi
-            curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\} -d '1'
+            curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_3b6bdb9 -d '1'
             echo "kvdb content"
-            echo "curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_$\{CIRCLE_WORKFLOW_ID:0:7\}"
+            echo $(curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_3b6bdb9)
       # Here's where you will add some code to rollback on failure
   deploy-frontend:
     docker:
@@ -341,25 +342,4 @@ jobs:
 workflows:
   default:
     jobs:
-      - build-frontend
-      - build-backend
-      - test-frontend:
-          requires: [build-frontend]
-      - test-backend:
-          requires: [build-backend]
-      - scan-backend:
-          requires: [build-backend]
-      - scan-frontend:
-          requires: [build-frontend]
-      - deploy-infrastructure:
-          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      - configure-infrastructure:
-          requires: [deploy-infrastructure]
-      - run-migrations:
-          requires: [configure-infrastructure]
-      - deploy-frontend:
-          requires: [run-migrations]
-      - deploy-backend:
-          requires: [run-migrations]
-      - smoke-test:
-          requires: [deploy-frontend, deploy-backend]
+      - run-migrations
