--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -210,10 +210,6 @@ jobs:
           name: Send migration results to KV DB
           command: |
             # Your code here
-            echo "insecure" >> ~/.curlrc
-            curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_3b6bdb9 -d '1'
-            echo "kvdb content"
-            echo $(curl https://kvdb.io/QfRCPyzDhZcjJqWQ1KFid8/migration_3b6bdb9)
             cd backend
             cat migrations_dump.txt 
             if grep -q "has been executed successfully." migrations_dump.txt 
@@ -316,7 +312,7 @@ jobs:
       - run:
           name: Backend smoke test.
           command: |
-            ipAddress=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
+            ipAddress=$(aws ec2 describe-instances --filters "Name=tag:Name,Values=backend-3b6bdb9" --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
             echo "${ipAddress}"
             export API_URL="http://${ipAddress}:3030"
             echo "${API_URL}"
@@ -329,7 +325,7 @@ jobs:
       - run:
           name: Frontend smoke test.
           command: |
-            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"
+            URL="http://udapeople-3b6bdb9.s3-website-us-east-1.amazonaws.com/#/employees"
             echo ${URL}
             if curl -s ${URL} | grep "Welcome"
             then
@@ -345,3 +341,5 @@ workflows:
   default:
     jobs:
       - run-migrations
+      - smoke-test:
+          requires: [run-migrations]
