--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -353,11 +353,8 @@ jobs:
       - run:
           name: Update cloudfront distribution
           command: |
-          aws cloudformation deploy \ 
-            --template-file .circleci/files/cloudfront.yml \ 
-            --stack-name cloudFrontStack \ 
-            --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" \ 
-            --tags project=udapeople
+              aws cloudformation deploy --template-file .circleci/files/cloudfront.yml --stack-name cloudFrontStack \
+              --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --tags project=udapeople
       # Here's where you will add some code to rollback on failure
       - revert-migrations
       - destroy-environment
