--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -336,7 +336,7 @@ jobs:
             if curl -s ${URL} | grep "Welcome"
             then
               # Change this to 0 after the job fails
-              return 1
+              return 0
             else
               return 1
             fi
@@ -353,6 +353,7 @@ jobs:
       - run:
           name: Update cloudfront distribution
           command: |
+              echo "CIRCLE_WORKFLOW_ID:0:7 = ${CIRCLE_WORKFLOW_ID:0:7}"
               aws cloudformation deploy --template-file .circleci/files/cloudfront.yml --stack-name cloudFrontStack \
               --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}" --tags project=udapeople
       # Here's where you will add some code to rollback on failure
