--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -375,13 +375,17 @@ jobs:
       - image: amazon/aws-cli
     steps:
       - checkout
+      - run:
+          name: Install tar utility
+          command: |
+            yum install -y tar gzip
       - attach_workspace:
           at: ~/
       - run:
           name: Get old stack workflow id
           command: |
             # your code here
-            cat project/.circleci/ansible/OldWorkflowId.txt
+            cat ~/project/.circleci/ansible/OldWorkflowId.txt
             export OldWorkflowID=$(cat ~/project/.circleci/ansible/OldWorkflowId.txt)
             echo "CIRCLE_WORKFLOW_ID: ${CIRCLE_WORKFLOW_ID:0:7}"
             export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" --stack-status-filter CREATE_COMPLETE --no-paginate --output text))
